# marketrobot

./: CMakeLists.txt  README.md
source/MarketRobot/Brokers/IB981/: ibbrokerage.cpp  ibbrokerage.h
source/MarketRobot/Components/: MrFactory.h
source/MarketRobot/DataCenter/: datacenter.cpp  datacenter.h
source/MarketRobot/Services/: RobotEngine.cpp  RobotEngine.h
source/MarketRobot/Services/Stage/: RegisterStages.cpp  RegisterStages.h  Stage.h  StageBuilder.h  StageManager.cpp  StageManager.h
src/: CMakeLists.txt
src/common/config/: config.h  config_server.yaml
src/mrlib/: CMakeLists.txt
src/mrlib/component/: config.cpp  config.h  logger.h  mylogger.cpp  mylogger.h
test/: CMakeLists.txt  test_config.cpp  test_json.cpp  test_log.cpp  test_log.h  test_log_mthread.cpp
